--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 body {
   background-color: rgb(111, 111, 111);
+  background-image: url("./phone-back.jpg");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
 }
 
 p {
@@ -16,6 +20,11 @@ p {
   margin-left: auto;
   margin-top: 40px;
   margin-right: auto;
+
+  background-image: url("./phone-cord.png");
+  background-position: left;
+  background-repeat: repeat-y;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 li {
@@ -25,4 +34,24 @@ li {
 a {
   text-decoration: none;
   color: black;
+}
+
+
+.blue {
+  color: blue;
+}
+
+#kep {
+  float: right;
+  height: 250px;
+}
+
+h1, h2 {
+  margin-left: 100px;
+  font-variant-caps: small-caps;
+  font-style: italic;
+}
+
+a:hover {
+  color: red;
 }
